# t5-xfile-deserializer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: clipmap.rs  com_world.rs  common.rs  ddl.rs  deserializer.rs  destructible.rs  font.rs  fx.rs  gameworld.rs  gfx_world.rs  lib.rs  light.rs  main.rs  menu.rs  misc.rs  serializer.rs  sound.rs  techset.rs  util.rs  weapon.rs  xanim.rs  xasset.rs  xmodel.rs
t5-xfile-defs/: Cargo.toml
t5-xfile-defs/src/: clipmap.rs  com_world.rs  common.rs  ddl.rs  destructible.rs  emblem.rs  font.rs  fx.rs  gameworld.rs  gfx_world.rs  glass.rs  lib.rs  light.rs  menu.rs  misc.rs  prelude.rs  sound.rs  techset.rs  util.rs  weapon.rs  xanim.rs  xasset.rs  xmodel.rs
