[workspace]
[package]
name = "t5_xfile_deserializer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
inflate = "0.4.5"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
serde = { version = "1.0.188", features = ["serde_derive"] }
