[workspace]
[package]
name = "t5_xfile_deserializer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
inflate = "0.4.5"
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
serde = { version = "1.0.188", features = ["serde_derive"] }
cgmath = { version = "0.18.0", optional = true }
windows = { version = "0.52.0", optional = true, features = ["Win32_Graphics_Direct3D9"] }
bitflags = { version = "2.4.1", features = ["serde"] }

[features]
cgmath = ["dep:cgmath"]
d3d9 = ["dep:windows"]
