[workspace]
members = ["t5-xfile-defs"]

[package]
name = "t5_xfile_deserializer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["cargo"] }
deflate = "1.0.0"
inflate = "0.4.5"
serde = { version = "1.0.188", features = ["serde_derive"] }
bincode = "1.3.3"
windows = { version = "0.52.0", optional = true, features = ["Win32_Foundation", "Win32_Graphics_Direct3D9"] }
t5-xfile-defs = { path = "t5-xfile-defs", features = ["std", "bincode", "serde"]}

[features]
deserializer = []
serializer = []
d3d9 = ["dep:windows"]
default = [ "deserializer" ]
