[package]
name = "t5-xfile-defs"
version = "0.1.0"
edition = "2024"

[dependencies]
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
serde = { version = "1.0.188", features = ["serde_derive"] }
cgmath = { version = "0.18.0", optional = true }
windows = { version = "0.52.0", optional = true, features = ["Win32_Foundation", "Win32_Graphics_Direct3D9"] }
bitflags = { version = "2.4.1", features = ["serde"] }
serde_arrays = "0.1.0"
bincode = { version = "1.3.3", optional = true }

[features]
cgmath = ["dep:cgmath"]
d3d9 = ["dep:windows"]
serde = []
std = []
bincode = ["dep:bincode"]